--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
+    "marked": "^16.2.0",
     "next": "15.3.5",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
